setup connection to mongoDB

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 TEAM_MEMBERS="Aecio, Bonnie, Shums"
+MONGO_DB_ATLAS_URI=mongodb+srv://darrenM:VUtkgtChghERVu4M@cluster0-euzig.mongodb.net/just-one-db?retryWrites=true&w=majority
