implemented auth ui and routes

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 TEAM_MEMBERS="Aecio, Insaf"
-
+MONGO_URI=mongodb+srv://dev:x1tmfEKjB5uiyiMt@cluster0-euzig.mongodb.net/Cluster0?retryWrites=true&w=majority
