changed auth routes in react

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-TEAM_MEMBERS="Aecio, Insaf"
-MONGO_URI=mongodb+srv://dev:x1tmfEKjB5uiyiMt@cluster0-euzig.mongodb.net/Cluster0?retryWrites=true&w=majority
+TEAM_MEMBERS="Aecio, Insaf, Darren"
+MONGO_DB_ATLAS_URI=mongodb+srv://dev:x1tmfEKjB5uiyiMt@cluster0-euzig.mongodb.net/Cluster0?retryWrites=true&w=majority
+
