--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 TEAM_MEMBERS="Aecio, Insaf, Darren"
 MONGO_DB_ATLAS_URI=mongodb+srv://dev:x1tmfEKjB5uiyiMt@cluster0-euzig.mongodb.net/Cluster0?retryWrites=true&w=majority
-
+JWT_SECRET=secret
+JWT_EXPIRATION=30h
