--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,11 @@
     "express-validator": "^6.6.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "memory-cache": "^0.2.0",
     "mongoose": "^5.9.20",
     "morgan": "~1.9.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
