--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.4.1",
+    "simple-peer": "^9.7.2",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
