--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.2.1",
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.4.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
